syntax = "proto3";

package kvstore;

// Defines the service
service KVStore {

rpc GET (GetRequest) returns (GetReply) {}
rpc PUT (PutRequest) returns (PutReply) {}
rpc DEL (DeleteRequest) returns (DeleteReply) {}

}


message GetRequest {
    string key =1;
}

message GetReply {
    string value =1; 
    int32 status = 2;
    string errorDescription = 3;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutReply {
    int32 status = 1;
    string errorDescription = 2;

}

message DeleteRequest {
     string key = 1;
 }

message DeleteReply {
    int32 status = 1;
    string errorDescription = 2;
}

